# slm-agents

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml  skills-lock.json  status.md  storytelling-with-data.md
.claude/: settings.local.json
.devcontainer/: devcontainer.json  post_create.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: thesis-tests.yml
data/input/: github_mcp_tests.json  github_tools.json
docs/: defense-prep.md  handoff-2026-06-13.md  handoff-2026-06-16.md  handoff-2026-06-17.md  handoff-2026-06-18.md  handoff-hpc-examiner-fixes.md  literature_references.md  thesis-examiner-issues.md  thesis-writing-status.md
docs/decisions/: adr-local-runtime.md  adr-routing-strategy.md  bfcl-simple-python-baseline.md  cascade-routing.md  citation-audit-2026-06-18.md  cli-ui-llm-implementation-plan.md  config-b-no-guided-baseline.md  config-cdq-itc-results.md  config-cdq-itc-spec.md  config-cdq-quantization-results.md  config-cdqfta-results.md  config-cdqrag-results.md  config-ft-aligned-size-sweep.md  config-ft-lora-aligned-ablation.md  config-ft-lora-results.md  config-pe-few-shot-results.md  config-technique-isolation-ablation.md  consistency-sweep-2026-06-18.md  cross-family-cd-results.md  cross-family-ft-aligned-results.md  cross-family-full-grid-plan.md  frontier-baselines-bfcl.md  github-mcp-eval-results.md  isolation-size-complete-analysis.md  latency-table-results.md  lora-training-data.md  mcnemar-significance-results.md  mcp-eval-results-section-outline.md  model-selection-rationale.md  no-guided-parser-fix-results.md  no-guided-thesis-corrections-2026-06-18.md  phase1-ablation-summary.md  poc-results-analysis.md  schema-rich-full-run-results.md  size-sweep-results.md  table-fill-verification-2026-06-16.md  tau-bench-retail-results.md  thesis-parallel-artifact-correction.md  vllm-backend-results.md  vllm-port-collision.md
docs/diagrams/: tool-calling-challenge-simple.mmd  tool-calling-challenge.mmd
docs/infrastructure/: hpc-environment.md
docs/meetings/: meeting-nick-16-march-2026.html
docs/planning/: experiment-spec.md  (+4 more)
llm_sdk/: __init__.py  pyproject.toml
project_plan/: bibliography.bib  main.md  main.tex  time_plan.ods
scripts/: capture_base_failure.py  eval_github_mcp.py  mcnemar_bfcl.py  merge_lora.py  pdf_to_md.py  prepare_lora_data.py  quantize_lora_merged.py  run_frontier_baselines.sh  smoke_parallel_schema.py  test_lora_format.py  train_lora.py
src/: __init__.py  __main__.py  backend.py  bfcl_adapter.py  chat_template_backend.py  decoder.py  frontier_backend.py  io.py  local_backend.py  pipeline.py  prompt.py  rag.py  schema.py  vllm_backend.py
template-thesis-guideline/: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  mkdocs.yaml  pyproject.toml  tasks.py
template-thesis-guideline/.github/workflows/: build_docs.yaml  check_template.yaml  deploy_docs.yaml  linkcheck.yaml
template-thesis-guideline/docs/: before.md  code.md  defense.md  faq.md  handing_in.md  index.md  meetings.md  resources.md  starting.md  writing.md
template-thesis-guideline/docs/stylesheets/: extra.css
template-thesis-guideline/scripts/: check_figures_updated.py  figures.py
template-thesis-guideline/{{ cookiecutter.project_name }}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
template-thesis-guideline/{{ cookiecutter.project_name }}/project_plan/: bibliography.bib  main.tex  time_plan.ods
template-thesis-guideline/{{ cookiecutter.project_name }}/thesis/: bibliography.bib  main.tex
template-thesis-guideline/{{ cookiecutter.project_name }}/thesis/backmatter/: backpage.tex
template-thesis-guideline/{{ cookiecutter.project_name }}/thesis/chapters/: 01_introduction.tex
template-thesis-guideline/{{ cookiecutter.project_name }}/thesis/frontmatter/: abstract.tex  acknowledgements.tex  approval.tex  frontpage.tex
template-thesis-guideline/{{ cookiecutter.project_name }}/thesis/setup/: info.tex  preamble.tex
tests/: conftest.py  test_parallel_pipeline.py  test_thesis_consistency.py  thesis_claims.py
thesis/: bibliography.bib  examiner-review.md  main-examiner-review-2026-06-10.md  main-examiner-review-2026-06-20.md  main-examiner-review.md  main-red-team-2026-06-22.md  main.tex  readme.md
thesis-written-document/: bibliography.bib
(+124 files in other folders)
