[project]
name = "slm-agents"
version = "0.1.0"
description = "Explores how small language models can be integrated into agentic systems, with a focus on capabilities, limitations, and practical design choices."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "numpy>=1.24",
  "pydantic>=2.0",
  "llm-sdk",
]

[dependency-groups]
dev = [
  "flake8>=7.0",
  "mypy>=1.10",
]

[tool.uv.sources]
llm-sdk = { path = "llm_sdk" }
