[project]
name = "slm-agents"
version = "0.1.0"
description = "Explores how small language models can be integrated into agentic systems, with a focus on capabilities, limitations, and practical design choices."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "numpy>=1.24",
  "pydantic>=2.0",
  "llm-sdk",
  "openai>=1.0",
]

[dependency-groups]
dev = [
  "flake8>=7.0",
  "mypy>=1.10",
  "pytest>=8.0",
]
hpc = [
  "vllm==0.8.5",
  "transformers>=4.40,<4.52",
  "bfcl-eval",
  "soundfile>=0.13",
  "sentence-transformers>=2.0",
  "scikit-learn>=1.0",
  "faiss-cpu>=1.7",
  # AWQ quantization
  "autoawq>=0.2",
  # LoRA training
  "peft>=0.10",
  "trl>=0.8",
  "accelerate>=0.27",
  "datasets>=2.18",
  # tau-bench (multi-step agentic benchmark)
  "tau-bench",
  "litellm>=1.41",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
llm-sdk = { path = "llm_sdk" }
bfcl-eval = { path = "vendor/gorilla/berkeley-function-call-leaderboard", editable = true }
tau-bench = { path = "vendor/tau-bench", editable = true }

[tool.uv]
override-dependencies = [
  "vllm-flash-attn; sys_platform == 'never'",
  "xformers; sys_platform == 'never'",
]
