[project]
name = "dtu-cs-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "cookiecutter>=2.6",
  "kaleido>=1.0.0rc15",
  "mkdocs-glightbox>=0.4",
  "mkdocs-material>=9.6.5",
  "numpy>=2.2.6",
  "plotly>=6.0.1",
  "typer>=0.15.2",
]

[dependency-groups]
dev = [
  "invoke>=2.2",
  "pre-commit>=4.3",
]
